# personal_financial_wallet

./: .gitignore  README.md  pyproject.toml
app/: main.py  service.py  validators.py
tests/: conftest.py  test_wallet.py
wallet/: finances.csv
